VB-413 nomis person id refactor
